--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "app/server.js",
   "scripts": {
     "dev": "nodemon server.js",
     "start": "NODE_ENV=production node server.js"
@@ -14,15 +14,20 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "@fastify/static": "^8.2.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/websocket": "^11.0.2",
-    "@scalar/fastify-api-reference": "^1.28.33",
+    "@scalar/fastify-api-reference": "^1.28.34",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "dotenv": "^16.5.0",
-    "fastify": "^5.3.2",
+    "fastify": "^5.3.3",
     "fastify-plugin": "^5.0.1",
     "jest": "^29.7.0",
     "mysql2": "^3.14.1",
-    "pino": "^9.6.0",
+    "pdfreader": "^3.0.7",
+    "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "winston": "^3.17.0"
   },
