--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=5000
-HOST=0.0.0.0
+# HOST=0.0.0.0
 HTTPS_PORT=443
-
+USE_DOCKER_IP=true
 
 DB_HOST=10.151.145.165
 DB_USER=core
