--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,17 +11,22 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=5000
-      - HTTPS_PORT=8443
-      - HOST= 0.0.0.0
+      - HTTPS_PORT=443
+      # - HOST=0.0.0.0
+      - USE_DOCKER_IP=true
     volumes:
-      - .:/app
+      # - .:/app/backend
       - ./certs:/app/certs
       - ./logs:/app/logs
     ports:
       - "5000:5000" #http
       - "443:443" #https
     networks:
-      - app-network
+      app-network:
+        ipv4_address: 172.20.0.10
 networks:
   app-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
