--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,21 +12,23 @@ services:
       - NODE_ENV=production
       - PORT=5000
       - HTTPS_PORT=443
-      # - HOST=0.0.0.0
       - USE_DOCKER_IP=true
+      - HOST_IP=10.1.11.179
     volumes:
-      # - .:/app/backend
       - ./certs:/app/certs
       - ./logs:/app/logs
     ports:
-      - "5000:5000" #http
-      - "443:443" #https
+      - "10.1.11.179:5000:5000" #http
+      - "10.1.11.179:443:443" #https
     networks:
       app-network:
-        ipv4_address: 172.20.0.10
+        ipv4_address: 10.1.11.10
+    extra_hosts:
+      - "host.docker.internal:10.1.11.179"
 networks:
   app-network:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.20.0.0/16
+        - subnet: 10.1.11.0/24
+          gateway: 10.1.11.1
