--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,22 +13,14 @@ services:
       - PORT=5000
       - HTTPS_PORT=443
       - USE_DOCKER_IP=true
-      - HOST_IP=10.1.11.179
     volumes:
       - ./certs:/app/certs
       - ./logs:/app/logs
     ports:
-      - "10.1.11.179:5000:5000" #http
-      - "10.1.11.179:443:443" #https
+      - "5000:5000" #http
+      - "443:443" #https
     networks:
-      app-network:
-        ipv4_address: 10.1.11.10
-    extra_hosts:
-      - "host.docker.internal:10.1.11.179"
+      - app-network
 networks:
   app-network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 10.1.11.0/24
-          gateway: 10.1.11.1
